Initial demo gulp pipeline setup

--- a/test_client/index.html
+++ b/test_client/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width">
   <title>CTi Color Picker demo</title>
   <link href="dist/ctiColorPicker.css" rel="stylesheet">
-  <link href="client.css" rel="stylesheet">
+  <link href="test_client/client.css" rel="stylesheet">
 </head>
 <body ng-controller="MainCtrl as main">
   <div class="cp-color-display"
@@ -15,9 +15,11 @@
   </div>
   <div cti-color-picker="main.colorData"></div>
   <!-- bower:js -->
+  <script src="bower_components/angular/angular.js"></script>
+  <script src="bower_components/hammerjs/hammer.js"></script>
   <!-- endbower -->
   <script src="dist/ctiColorPicker.js"></script>
-  <script src="app.js"></script>
+  <script src="test_client/app.js"></script>
 </body>
 </html>
 
